@@ -10,7 +10,6 @@ requires 'Geometry::Primitive' => '0.16';
 requires 'Graphics::Color' => '0.20';
 requires 'Moose' => '0.79';
 requires 'MooseX::Clone' => '0.04';
-requires 'MooseX::AttributeHelpers' => '0.17';
 requires 'MooseX::Storage' => '0.17';
 requires 'MooseX::Types' => '0.21';
 requires 'Forest' => '0.06';
